--- a/src/css/style.css
+++ b/src/css/style.css
@@ -76,17 +76,46 @@ header ul li:hover {
 
 .background-text{
   text-align: center;
-  color: var(--theme-color);
+  color: black;
 }
 
 .background-text h1{
-  font-size: 1.5rem;
+  font-size: 2 rem;
   padding-bottom: 10px;
 }
-
+@media screen and (max-width: 1080px) {
+  .background-text h1 {
+    font-size: 1.8rem;
+  }
+}
+@media screen and (max-width: 720px) {
+  .background-text h1 {
+    font-size: 1.6rem;
+  }
+}
+@media screen and (max-width: 390px) {
+  .background-text h1 {
+    font-size: 1.4rem;
+  }
+}
 .background-text p{
   font-size: 1.2rem;
   padding-bottom: 20px;
+}
+@media screen and (max-width: 1080px) {
+  .background-text p {
+    font-size: 0.8rem;
+  }
+}
+@media screen and (max-width: 720px) {
+  .background-text p {
+    font-size: 0.6rem;
+  }
+}
+@media screen and (max-width: 390px) {
+  .background-text p {
+    font-size: 0.4rem;
+  }
 }
 
 form{
@@ -95,15 +124,20 @@ form{
   margin: auto;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
-
+#search{
+  gap: 1.5rem;
+}
 form input{
   flex: 1;
+  width: 60%;
   height: 100%;
-  border: 1px solid black;
+  border: none;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
   outline: 0;
   border-radius: 8px;
-  padding: 10px;
+  padding: 10px 20px;
   background: transparent;
   color: #fff;
   font-size: 18px;
@@ -115,7 +149,8 @@ form button{
   background: transparent;
   color: black;
   font-size: 18px;
-  border: 1px solid black;
+  border: none;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
   outline: 0;
   border-radius: 8px;
   padding: 10px;
@@ -135,7 +170,7 @@ img{
   object-fit: cover;
   background-repeat: no-repeat;
   border-radius: 10PX;
-  border: 2px solid var(--theme-color);
+  border: 2px solid black;
 }
 
 #photo-card {
@@ -156,5 +191,18 @@ img{
   border: none;
   font-size: 2rem;
   background-color: transparent;
+  cursor: pointer;
+}
+
+#show-more{
+  flex: content;
+  border: none;
+  justify-content: center;
+  background: transparent;
+  color: black;
+  font-size: 18px;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
+  outline: 0;
+  padding: 10px;
   cursor: pointer;
 }
